Applied fixes following code review changes requirements
Signed-off-by: Fabrice Buscaylet <fabrice.buscaylet@artelys.com>